fix(ui): JobsHeader - tweak spacing; use i18n

--- a/packages/ui/src/components/jobs-header/jobs-header.module.css
+++ b/packages/ui/src/components/jobs-header/jobs-header.module.css
@@ -1,10 +1,16 @@
 .root {
   align-items: stretch;
   flex-wrap: wrap;
+  padding: var(--space-small) 0;
 }
 
 .item {
-  flex: 1 1 auto;
-  padding: var(--space-small);
+  flex: 0 0 auto;
+  padding: 0 var(--space-medium);
   border-left: 1px solid var(--color-outline);
+}
+
+.item:first-child {
+  padding-left: 0;
+  border-left: 0;
 }
